--- a/my-tonconnect-manifest.json
+++ b/my-tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://www.linkedin.com/in/hiimseeking",
+    "url": "http://172.17.171.196:5173",
     "name": "Local DApp React",
     "iconUrl": "https://media.licdn.com/dms/image/C5603AQGV5AfcCj_LOg/profile-displayphoto-shrink_200_200/0/1590513356563?e=1719446400&v=beta&t=j39lVx1_9PXJqwfrTFbtNmC0usoyawZ52UlSWjVVLk4",
     "termsOfUseUrl": "",
